<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Music.UpdateMusicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etgenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_genero"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etartista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_artista"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etanios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_anios"
            android:inputType="phone" />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_update_Music" />

        <Button
            android:id="@+id/btDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_delete_Music" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/bt_cancion"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_addmusic"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <ImageButton
                android:id="@+id/btPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/msgEscucharAudio"
                android:src="@drawable/ic_play" />

            <ImageButton
                android:id="@+id/bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_delete" />

        </LinearLayout>



        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

    </LinearLayout>
</ScrollView>